Fix footer overflow and position

--- a/Responsive Web Design/Tribute Page/styles.css
+++ b/Responsive Web Design/Tribute Page/styles.css
@@ -117,6 +117,7 @@
 
 * {
   /* border: 1px solid red; */
+  overflow-x: hidden;
 }
 
 html {
@@ -127,6 +128,9 @@ html {
 body {
   color: var(--on-surface);
   background-color: var(--surface);
+  padding: 0;
+  margin: 0;
+  
 }
 
 #page-container {
